For full details, see the git log at: https://github.com/ksh93/ksh

Any uppercase BUG_* names are modernish shell bug IDs.

2021-11-24:

- The --posix mode was amended to stop the '.' command (but not 'source') from
  looking up functions defined with the 'function' keyword. In the POSIX
  standard and on other shells, the '.' command finds only script files.

2021-11-23:

- A bug was fixed that allowed arithmetic expressions to assign out-of-range
  values to variables of an enumeration type defined with the 'enum' command,
  causing undefined behavior. Within arithmetic expressions, enumeration
  values translate to index numbers from 0 to the number of elements minus 1.
  That range is now checked for. Decimal fractions are ignored.

2021-11-21:

- It is now possible to use types defined by 'enum' in contexts where the
  script is entirely parsed before (or without) being executed, such as
  dotted/sourced scripts and scripts compiled by shcomp.

- Added support for the size mode to the stty(1) built-in. This mode is used
  to display the terminal's number of rows and columns. Note that the stty
  built-in is not compiled in by default. This can be changed by adding
  stty to the table of built-ins in src/cmd/ksh93/data/builtins.c.

2021-11-20:

- Listing types with 'typeset -T' no longer displays incomplete versions of
  types created by the enum built-in.

2021-11-18:

- The printf built-in command now supports a -v option as on bash and zsh.
  This allows you to assign formatted output directly to a variable.

- Fixed a performance regression introduced on 2021-05-03 that caused
  the shbench[*] fibonacci benchmark to run slower.
  [*]: https://github.com/ksh-community/shbench

2021-11-16:

- By default, arithmetic expressions in ksh no longer interpret a number
  with a leading zero as octal in any context. Use 8#octalnumber instead.
  Before, ksh would arbitrarily recognize the leading octal zero in some
  contexts but not others, e.g., both of: